observability/base/grafana-oncall/httproute-oncall.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: oncall
  namespace: observability
spec:
  parentRefs:
    - name: platform-private
      namespace: infrastructure
  hostnames:
    - "oncall.priv.${domain_name}"
  rules:
    - backendRefs:
        - name: oncall-engine
          port: 8080
