observability/base/grafana-oncall/httproute-rabbitmq.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: oncall-rabbitmq
  namespace: observability
spec:
  parentRefs:
    - name: platform-tailscale
      namespace: infrastructure
  hostnames:
    - "oncall-rabbitmq.priv.${domain_name}"
  rules:
    - backendRefs:
        - name: oncall-rabbitmq
          port: 15672
